--- a/WebVisualizations/css/custom.css
+++ b/WebVisualizations/css/custom.css
@@ -64,7 +64,7 @@ body{
 
 .txt-visualization{
     color: teal;
-    font-size: 24px;
+    font-size: 30px;
 
 }
 
@@ -80,7 +80,7 @@ body{
     
 }
 
-// Small devices (landscape phones, 576px and up)
+ .Small devices landscape phones: 576px and up
 @media (min-width: 576px) { 
     [class*="col-"] {
         width: 25%};
@@ -119,3 +119,20 @@ body{
  em{
      padding-left: 50px;
  }
+
+ .footer{
+	background-color: #505251; 
+    border-top-style: solid; 
+    border-top-width: 4px; 
+    border-top-color: #38ab87;
+    color: white; 
+    min-height: 50px; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px; 
+    text-align: center; 
+    position: fixed;
+    padding-top: 10px; 
+	width: 100%;
+	left: 0;
+	bottom: 0;
+}
