--- a/WebVisualizations/css/custom.css
+++ b/WebVisualizations/css/custom.css
@@ -18,6 +18,7 @@ body{
     height: 60px; 
     background-color: white;
     margin-left: 0;
+    overflow: hidden;
     
 }
 
@@ -80,12 +81,7 @@ body{
     
 }
 
- .Small devices landscape phones: 576px and up
-@media (min-width: 576px) { 
-    [class*="col-"] {
-        width: 25%};
     
-    }
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     [class*="col-"] {
